--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "refactor-plugin-common",
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc --declaration",
     "build-all": "npm run compile && npm run extract-api && npm run generate-docs",
