--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^4.2.0",
     "mocha": "^8.1.0",
     "prettier": "^2.0.5",
+    "shift-refactor": "^2.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
